<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginbg"
    android:orientation="vertical"
    android:id="@+id/root">

    <include layout="@layout/top" />

    <EditText
        android:id="@+id/usename"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/login_input"
        android:hint="@string/inputmember"
        android:padding="5dp"
        android:textColorHint="@color/logininput"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_input"
        android:hint="@string/inputpwd"
        android:padding="5dp"
        android:password="true"
        android:textColorHint="@color/logininput"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="right">

        <Button
            android:id="@+id/find_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/findpwd"
            android:textColor="@color/gray7e"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/yellowbtn"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>