<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayf4"
    android:orientation="vertical">

    <include layout="@layout/personal_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="39dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/login_input"
            android:hint="@string/inputphone"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="5dp"
            android:singleLine="true"
            android:textColorHint="@color/logininput"
            android:textSize="16sp" />

        <Button
            android:id="@+id/get_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@drawable/yellow_coner"
            android:padding="10dp"
            android:text="@string/check"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/code_input"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_input"
        android:hint="@string/inputcode"
        android:inputType="number"
        android:maxLength="6"
        android:padding="5dp"
        android:singleLine="true"
        android:textColorHint="@color/logininput"
        android:textSize="16sp" />


    <Button
        android:id="@+id/bind_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/yellowbtn"
        android:text="绑定"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>